Adicionando estilos  a página

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
         <!-- Lista "Em breve" -->
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="/src/images/em_breve/Pedra filosofal.jpg" alt="Pedra Filosofal">
+                <img src="/src/images/lancamentos/Pedra filosofal.jpg" alt="Pedra Filosofal">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/harry-potter-e-a-camara-secreta.jpg"
+                <img src="/src/images/lancamentos/harry-potter-e-a-camara-secreta.jpg"
                     alt="Harry Potter e  a Câmera Secreta">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/askaban.jpg" alt="Harry Potter Prisioneiro de Askaban">
+                <img src="/src/images/lancamentos/askaban.jpg" alt="Harry Potter Prisioneiro de Askaban">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/fogo2.jpg" alt="harry Potter e o Cálice de Fogo">
+                <img src="/src/images/lancamentos/calice-de-fogo-1.jpg" alt="harry Potter e o Cálice de Fogo">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/hq720.jpg" alt="Harry Potter e a oredem da  Fênix">
+                <img src="/src/images/lancamentos/orden.png" alt="Harry Potter e a ordem da  Fênix">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/enigma.jpg" alt="Harry Potter e o enigma do Príncipe">
+                <img src="/src/images/lancamentos/enigma.jpg" alt="Harry Potter e o enigma do Príncipe">
             </li>
         </ul>
 
@@ -85,10 +85,10 @@
         <!-- Lista "Mais no Star+" -->
         <ul data-tab-id="mais_star" class="shows__list shows__list__item__display">
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/reliquia.jpg" alt="Harry Potter e as Relíquias da Morte">
+                <img src="/src/images/finalsaga/reliquia.jpg" alt="Harry Potter e as Relíquias da Morte">
             </li>
             <li class="shows__list__item">
-                <img src="/src/images/mais_populares/parte2.jpg" alt="Harry Potter e as Relíquias da Morte – Parte 2">
+                <img src="/src/images/finalsaga/reliquia2.jpg" alt="Harry Potter e as Relíquias da Morte – Parte 2">
             </li>
         </ul>
     </section>
@@ -98,7 +98,7 @@
         </h2>
         <ul class="plans__list">
             <li class="plans__list__item">
-                <img src="/src/images/em_breve/Pedra filosofal.jpg" alt="Pedra filosofal"
+                <img src="/src/images/lancamentos/Pedra filosofal.jpg" alt="Pedra filosofal"
                     style="width: 100%; height: 40%;">
                 <strong class="title--small">Harry Potter e a Pedra Filosofal</strong>
                 <p class="text" style="text-align: justify;">
@@ -110,7 +110,7 @@
                 <button class="plans__list__btn" style="width: 100%;">Assistir Agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="/src/images/mais_populares/enigma.jpg" alt="Harry Potter e o enigma do Príncipe"
+                <img src="/src/images/lancamentos/enigma.jpg" alt="Harry Potter e o enigma do Príncipe"
                     style="width: 100%; height: 40%;">
 
                 <strong class="title--small">Harry Potter e o Enigma do Prícipe</strong>
@@ -123,7 +123,7 @@
                 <button class="plans__list__btn" style="width: 100%;">Assistir Agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="/src/images/mais_populares/parte2.jpg" alt="Harry Potter e as Relíquias da morte Parte - 2"
+                <img src="/src/images/finalsaga/reliquia2.jpg" alt="Harry Potter e as Relíquias da morte Parte - 2"
                     style="width: 100%; height: 40%;">
                 <strong class="title--small">Harry Potter e as Relíquias da Morte Parte-2</strong>
                 <p class="text" style="text-align: justify;">
