Adicionando logo do site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__container">
             <h1>
-                <img src="./src/images/logos/logo.jpg" alt="Logo do filme Harry potter"
+                <img src="./src/images/logos/logoPotter.png" alt="Logo do filme Harry potter"
                     class="header__container__logo">
             </h1>
             <ul class="header__links">
