--- a/index.html
+++ b/index.html
@@ -171,8 +171,12 @@
                     pode ser tratada por
                     uma bruxa ou bruxo que é capaz de aceitar a morte, uma vez que apenas por tal ele pode ser visto.
                 </p>
+                <iframe width="640" height="360" src="https://www.youtube.com/embed/6T45PEo55Po" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
             </div>
-        </div>
     </section>
     <section class="dispositivos">
         <h2 class="title">Saga compatível com todos tipos de Dispositivos</h2>
@@ -232,7 +236,8 @@
                     <button class="faq__toggle-button">+</button>
                 </div>
                 <div class="faq__questions__item__answer">
-                    <p class="resposta">O site oferece um acesso grátis com anúncios.Assim voçê pode saborear todos os minutos de cada saga.</p>
+                    <p class="resposta">O site oferece um acesso grátis com anúncios.Assim voçê pode saborear todos os
+                        minutos de cada saga.</p>
                 </div>
             </li>
             <li class="faq__questions__item">
@@ -277,8 +282,7 @@
                     <a href="#">Harry Potter e a Câmara Secreta (2002)</a>
                 </li>
                 <li>
-                    <a
-                        href="#">Harry Potter e o Prisioneiro de Azkaban (2004)</a>
+                    <a href="#">Harry Potter e o Prisioneiro de Azkaban (2004)</a>
                 </li>
                 <li>
                     <a href="#">Harry Potter e o Cálice de Fogo (2005)</a>
@@ -287,12 +291,10 @@
             <ul class="footer__links">
                 <h6>Mais</h6>
                 <li>
-                    <a
-                        href="#">Harry Potter e a Ordem da Fênix (2007)</a>
+                    <a href="#">Harry Potter e a Ordem da Fênix (2007)</a>
                 </li>
                 <li>
-                    <a
-                        href="#">Harry Potter e o Enigma do Príncipe (2009)</a>
+                    <a href="#">Harry Potter e o Enigma do Príncipe (2009)</a>
                 </li>
             </ul>
 
