Atualizando informações do footer

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </ul>
     </section>
     <section class="plans">
-        <h2 class="title--big">
+        <h2 class="title--big harry-potter">
             Escolha seu filme
         </h2>
         <ul class="plans__list">
@@ -174,7 +174,7 @@
             </div>
     </section>
     <section class="dispositivos">
-        <h2 class="title">Objetos Icônicos da Saga Harry Potter</h2>
+        <h2 class="title harry-potter">Objetos Icônicos da Saga Harry Potter</h2>
         <ul class="dispositivos__itens">
             <li class="dispositivos__itens__item">
                 <img src="/src/images/harryvarinha.webp" alt="Varinha do Harry">
@@ -297,7 +297,6 @@
         <div class="container__text">
             <p class="text--small">
                 2024 Harry potter . Todos os direitos reservados.
-                Serviço de assinatura paga.Conteúdo sujeito a disponibilidade, Venha Assistir.
             </p>
         </div>
 
